Made edits to main.css to hopefully fix the mobile issue. Also changed the mobile picture to have the credit not take up too much space

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -98,19 +98,35 @@ input, select, textarea {
 		box-sizing: inherit;
 	}
 
-	body {
-		background-image: 
+body {
+	background-image: none;
+	background-color: #000000;
+	position: relative;
+}
+
+	body::before {
+		content: "";
+		position: fixed;
+		top: 0;
+		left: 0;
+		width: 100vw;
+		height: 100vh;
+		height: 100svh;
+		z-index: 0;
+		pointer-events: none;
+
+		background-image:
 			linear-gradient(
-			to bottom,
-			rgba(0, 0, 0, 0.15) 0%,
-			rgba(0, 0, 0, 0.30) 20%,
-			rgba(0, 0, 0, 0.45) 100%
+				to bottom,
+				rgba(0, 0, 0, 0.15) 0%,
+				rgba(0, 0, 0, 0.30) 20%,
+				rgba(0, 0, 0, 0.45) 100%
 			),
 			url("images/PIA22931.jpeg");
+
 		background-size: cover;
-		background-position: center;
+		background-position: center center;
 		background-repeat: no-repeat;
-		background-attachment: fixed;
 	}
 	/*
 	body {
@@ -171,23 +187,7 @@ input, select, textarea {
 		}
 
 
-		@media screen and (max-width: 736px) {
-		body {
-			background-image:
-			linear-gradient(
-				to bottom,
-				rgba(0, 0, 0, 0.10) 0%,
-				rgba(0, 0, 0, 0.35) 60%,
-				rgba(0, 0, 0, 0.75) 100%
-			),
-			url("images/mobile.jpg");
 
-			background-size: cover;
-			background-position: top center;
-			background-repeat: no-repeat;
-			background-attachment: scroll;
-		}
-		}
 
 	a {
 		-moz-transition: color 0.2s ease, border-bottom 0.2s ease;
@@ -3875,13 +3875,32 @@ header.major.with-subheader:after {
 
 		}
 
+		@media screen and (max-width: 736px) {
+			body::before {
+				background-image:
+					linear-gradient(
+						to bottom,
+						rgba(0, 0, 0, 0.10) 0%,
+						rgba(0, 0, 0, 0.35) 60%,
+						rgba(0, 0, 0, 0.75) 100%
+					),
+					url("images/mobile.jpg");
+
+				background-size: cover;
+				background-position: center center;
+				background-repeat: no-repeat;
+			}
+		}
+
 /* Wrapper */
 
-	#wrapper {
-		width: 64em;
-		max-width: calc(100% - 4em);
-		margin: 0 auto;
-	}
+		#wrapper {
+			width: 64em;
+			max-width: calc(100% - 4em);
+			margin: 0 auto;
+			position: relative;
+			z-index: 1;
+		}
 
 		@media screen and (max-width: 480px) {
 
